--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
         <ul>
       <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li>
       <li onclick="showPage('page-tolerance')">📏 Допуски</li>
+      <li><a href="hardness-tool.html" style="color: inherit; text-decoration: none;">🔨 Твердость</a></li>
       <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
       <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
       <!-- <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li> -->
@@ -208,6 +209,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
