--- a/index.html
+++ b/index.html
@@ -35,32 +35,32 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
     <!-- <button class="close-btn" onclick="closeSidebar()">×</button> -->
     <br>
     <h3>Меню</h3>
-        <ul>
-      <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li>
+    <ul>
+      <!-- <li><a href="inspectorcontrols.html" style="color: inherit; text-decoration: none; display: block; height: 100%;">⚙️ Параметры контроля</a></li> -->
       <li onclick="showPage('page-tolerance')">📏 Допуски</li>
       <li><a href="hardness-tool.html" style="color: inherit; text-decoration: none;">🔨 Твердость</a></li>
       <li><a href="elements.html" style="color: inherit; text-decoration: none;">⚛ Материалы</a></li>
       <li><a href="catalog.html" style="color: inherit; text-decoration: none;">📚 Справочник</a></li>
       <!-- <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li> -->
       <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">🅰️ gost_reader</a></li>
-      <li><a href="vectorize3.html" style="color: inherit; text-decoration: none;">♻ vectorize</a></li>
+      <li><a href="vectorize3.html" style="color: inherit; text-decoration: none;">♻️ vectorize</a></li>
       
-      <li><a href="htmlreader.html" style="color: inherit; text-decoration: none;">⌨️ html_Read</a></li>
+      <li><a href="htmlreader.html" style="color: inherit; text-decoration: none;">⌨️ html_desk</a></li>
       <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
       <!-- <li onclick="showPage('page-ncr')">📝 Акты несоответствия</li> -->
       <!-- <li onclick="showPage('page-checklist')">📎 Комплектность</li> -->
 
-      <li onclick="showPage('page-mailer')">📧 репорт</li>
+      <!-- <li onclick="showPage('page-mailer')">📧 репорт</li> -->
       <!-- <li onclick="showPage('page-materials')">🔧 Материалы</li> -->
       <!-- <li onclick="showPage('page-standards')">📚 Стандарты</li> -->
       <!-- <li onclick="showPage('page-compare')">🔄 Сравнение</li> -->
       <!-- <li onclick="showPage('page-company')">🏭 Предприятия</li> -->
-      <li onclick="showPage('page-reminders')">🔔 Напоминания</li>
+      <!-- <li onclick="showPage('page-reminders')">🔔 Напоминания</li> -->
       <!-- <li onclick="showPage('page-translate')">🌐 Перевод</li> -->
       <!-- <li onclick="showPage('page-statistics')">📊 Статистика</li> -->
-      <li onclick="showPage('page-inspector-profile')">👤 профиль</li>
-      <li onclick="showPage('page-analytics')">📈 Аналитика</li> 
+      <!-- <li onclick="showPage('page-inspector-profile')">👤 профиль</li> -->
+      <!-- <li onclick="showPage('page-analytics')">📈 Аналитика</li>  -->
       <!-- <li onclick="showPage('page-add-item')">📗 Добавить изделие</li> -->
       <!-- <li onclick="showPage('page-help')">📘 инфа</li>  -->
       <!-- <li onclick="showPage('page-smart')">⚡ консоль</li> -->
@@ -209,6 +209,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
