--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
       <!-- <li><a href="pdfreader.html" style="color: inherit; text-decoration: none;">🅰️ pdf_reader</a></li> -->
       <li><a href="tesseract.html" style="color: inherit; text-decoration: none;">🅰️ gost_reader</a></li>
       <li><a href="vectorize3.html" style="color: inherit; text-decoration: none;">♻️ vectorize</a></li>
-      
+      <li><a href="mykits.html" style="color: inherit; text-decoration: none;">📙 mykits</a></li>
       <li><a href="htmlreader.html" style="color: inherit; text-decoration: none;">⌨️ html_desk</a></li>
       <!-- <li onclick="showPage('inspectorcontrols')">⚙️ Параметры контроля</li> -->
       <!-- <li onclick="showPage('page-inspection')">🔍 Проверки</li> -->
@@ -209,6 +209,7 @@ color: rgba(119, 93, 185, 0.733); font-weight: bold;"
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
