--- a/mykits.html
+++ b/mykits.html
@@ -63,6 +63,7 @@
 </head>
 <body>
   <h2>Мои сниппеты</h2>
+  <p style="padding: 5px;"><a href="index.html" style="color: inherit; text-decoration: none; display: block; height: 40px; width: 40px; position: absolute; top: 0; left: 0; margin: 10px;">↩️ </a></p>
   <input type="text" id="userIdInput" placeholder="Введите ваше имя" autocomplete="off" />
 
   <div id="kits-container"></div>
@@ -145,4 +146,5 @@
     }
   </script>
 </body>
+
 </html>
